reuqirements : pip freeze > requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,54 @@
-Flask==0.10.1
-Flask-HTTPAuth==3.1.2
-Jinja2==2.4
-passlib==1.6.5
+adium-theme-ubuntu==0.3.4
+APScheduler==2.1.2
+beautifulsoup4==4.6.0
+blinker==1.4
+certifi==2017.7.27.1
+chardet==3.0.4
+click==6.7
+crypto==1.4.1
+DateTime==4.2
+enum-compat==0.0.2
+enum34==1.1.6
+eventlet==0.21.0
+Flask==0.12.2
+flask-heroku==0.1.9
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-Session==0.3.1
+Flask-SocketIO==2.9.2
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+funcsigs==1.0.2
+futures==3.1.1
+gevent==1.2.2
+gevent-socketio==0.3.5rc2
+gevent-websocket==0.10.1
+greenlet==0.4.12
+gunicorn==18.0
+gyp==0.1
+idna==2.5
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+Naked==0.1.31
+passlib==1.7.1
+plivo==0.11.3
+psycopg2==2.7.3.2
 python-dateutil==2.4.2
-requests==2.8.1
-SQLAlchemy==1.0.9
-Werkzeug==0.11.2
-gevent==1.2.1
-gunicorn==19.6.0
+python-engineio==1.7.0
+python-socketio==1.8.0
+pytz==2017.2
+PyYAML==3.12
+requests==2.9.1
+shellescape==3.4.1
+six==1.11.0
+SQLAlchemy==1.1.12
+SQLAlchemy-ImageAttach==1.1.0
+tzlocal==1.4
+unity-lens-photos==1.0
+urllib3==1.22
+virtualenv==15.1.0
+Wand==0.4.4
+Werkzeug==0.12.2
+WTForms==2.1
+zope.interface==4.4.3
